[gd_scene load_steps=20 format=3 uid="uid://b7rxaeagsmc6v"]

[ext_resource type="Script" path="res://scenes/player_test_scene.gd" id="1_2ytob"]
[ext_resource type="PackedScene" uid="uid://vi5ydb7g6j2x" path="res://nodes/player/player.tscn" id="1_ffqlx"]
[ext_resource type="Environment" uid="uid://ds1lha3ksi3cf" path="res://shaders/game_environment.tres" id="2_bmhtq"]
[ext_resource type="PackedScene" uid="uid://duxcdv8q4kaw" path="res://items/plate_item.tscn" id="2_nymif"]
[ext_resource type="Script" path="res://nodes/station/station.gd" id="2_y0fa2"]
[ext_resource type="PackedScene" uid="uid://cmu31f6bsdcwm" path="res://assets/restaurant/Floor_Kitchen1.gltf" id="3_mse3d"]
[ext_resource type="PackedScene" uid="uid://daex6ab5jturh" path="res://nodes/objects/sink/sink.tscn" id="4_xgdie"]
[ext_resource type="PackedScene" uid="uid://dpirem0bs2mvd" path="res://items/food_item.tscn" id="4_y7cvn"]
[ext_resource type="PackedScene" uid="uid://diatgfafcgk42" path="res://nodes/objects/oven/oven.tscn" id="6_hpc75"]
[ext_resource type="PackedScene" uid="uid://dkwyfpiptj64l" path="res://nodes/objects/counter/counter.tscn" id="6_ieb1w"]
[ext_resource type="PackedScene" uid="uid://j8tcilti0ans" path="res://nodes/objects/fridge/fridge.tscn" id="8_a8p7k"]
[ext_resource type="PackedScene" uid="uid://cuxomlju4e5xg" path="res://nodes/objects/cutting_board/cutting_board.tscn" id="10_rsu6p"]
[ext_resource type="PackedScene" uid="uid://dte3uk5uqn7jl" path="res://nodes/objects/food_spawner/food_spawner.tscn" id="11_wdwv7"]
[ext_resource type="Resource" uid="uid://ctf15b2ggcsm1" path="res://items/resources/burger_patty_raw_item.tres" id="12_ie5j2"]
[ext_resource type="Resource" uid="uid://b64621o3jjgor" path="res://items/resources/burger_bread_item.tres" id="13_uqn7k"]
[ext_resource type="Resource" uid="uid://bi80xqad2yft1" path="res://items/resources/cheese_item.tres" id="14_b4i66"]
[ext_resource type="PackedScene" uid="uid://l10saewclqn1" path="res://nodes/objects/trashcan/trashcan.tscn" id="15_xny0n"]
[ext_resource type="PackedScene" uid="uid://03f307g5cj2y" path="res://nodes/customers/customer.tscn" id="16_6lf8e"]
[ext_resource type="PackedScene" uid="uid://dswwd02hmgwf" path="res://ui/player_crosshair.tscn" id="19_t8ib0"]

[node name="player_test_scene" type="Node3D"]
script = ExtResource("1_2ytob")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_bmhtq")

[node name="PlateItem" parent="." instance=ExtResource("2_nymif")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0290978, 2.06553, -3.35696)

[node name="PlateItem3" parent="." instance=ExtResource("2_nymif")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.417726, 2.06553, -3.35696)

[node name="PlateItem2" parent="." instance=ExtResource("2_nymif")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226129, 2.06553, -2.8096)

[node name="TestItem2" parent="." instance=ExtResource("4_y7cvn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.717053, 1.94429, -3.23415)

[node name="TestItem4" parent="." instance=ExtResource("4_y7cvn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.424295, 1.94429, -2.95137)

[node name="Player" parent="." node_paths=PackedStringArray("stations") instance=ExtResource("1_ffqlx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83466, 0)
stations = [NodePath("../Station0"), NodePath("../Station1"), NodePath("../Station3"), NodePath("../Station2")]

[node name="Station0" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.57556)
script = ExtResource("2_y0fa2")

[node name="PlayerPosition" type="Node3D" parent="Station0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.11379, 1.78131)

[node name="Counter" parent="Station0" instance=ExtResource("6_ieb1w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.539058, 0, 0.344252)

[node name="Counter2" parent="Station0" instance=ExtResource("6_ieb1w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.460942, 0, 0.344252)

[node name="Station1" type="Node3D" parent="."]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 3.30936, 2.38419e-07, 0.0156212)
script = ExtResource("2_y0fa2")

[node name="PlayerPosition" type="Node3D" parent="Station1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0297418, 2.11379, 0.683467)

[node name="Sink" parent="Station1" instance=ExtResource("4_xgdie")]
transform = Transform3D(1, 0, -5.56363e-08, 0, 1, 0, 5.56363e-08, 0, 1, -0.540062, -4.26326e-13, -0.635939)

[node name="Fridge" parent="Station1" instance=ExtResource("8_a8p7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.708731, 0, -0.745225)

[node name="FoodSpawner" parent="Station1/Fridge" instance=ExtResource("11_wdwv7")]
transform = Transform3D(-0.258684, 0, 0.965962, 0, 1, 0, -0.965962, 0, -0.258684, -0.129885, 2.01979, -0.122233)
food_type = ExtResource("12_ie5j2")

[node name="FoodSpawner2" parent="Station1/Fridge" instance=ExtResource("11_wdwv7")]
transform = Transform3D(-0.258684, 0, 0.965962, 0, 1, 0, -0.965962, 0, -0.258684, 0.356961, 2.01979, -0.0823138)
food_type = ExtResource("13_uqn7k")

[node name="FoodSpawner3" parent="Station1/Fridge" instance=ExtResource("11_wdwv7")]
transform = Transform3D(-0.258684, 0, 0.965962, 0, 1, 0, -0.965962, 0, -0.258684, -0.0862443, 1.65454, -0.0321147)
food_type = ExtResource("14_b4i66")

[node name="Station2" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, -2.76718, 7.15256e-07, 0.922757)
script = ExtResource("2_y0fa2")

[node name="PlayerPosition" type="Node3D" parent="Station2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.109656, 2.11379, 0.533505)

[node name="oven" parent="Station2" instance=ExtResource("6_hpc75")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02361, -7.15256e-07, -0.780981)

[node name="Station3" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 1.94335)
script = ExtResource("2_y0fa2")

[node name="PlayerPosition" type="Node3D" parent="Station3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.109656, 2.11379, 1.38858)

[node name="CuttingBoard" parent="Station3" instance=ExtResource("10_rsu6p")]

[node name="Trashcan" parent="Station3" instance=ExtResource("15_xny0n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1.19209e-07)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.405173, 0.91424, 0, -0.91424, -0.405173, 0, 2.55651, 0)

[node name="Floor" type="Node3D" parent="."]

[node name="Floor_Kitchen1" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0939918, 0, -3.02932)

[node name="Floor_Kitchen2" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0939918, 0, 0.970685)

[node name="Floor_Kitchen3" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.09399, 0, -3.02932)

[node name="Floor_Kitchen4" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.09399, 0, 0.970685)

[node name="Floor_Kitchen5" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90601, 0, -3.02932)

[node name="Floor_Kitchen6" parent="Floor" instance=ExtResource("3_mse3d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90601, 0, 0.970685)

[node name="Customer" parent="." instance=ExtResource("16_6lf8e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0414257, 4.76837e-07, -4.56293)

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerCrosshair" parent="UI" instance=ExtResource("19_t8ib0")]
